--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8"/>
+        <title>МЯУ</title>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        test
+        <h1>TESJDSFHSDFSUDFDSH</h1>test
     </body>
 </html>
